--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <a href="https://www.linkedin.com/in/awsyousif"><img src="image/linkedin.png" alt="Linkedin"></a>
 
-                <a href="https://plus.google.com/u/0/108053289136553717187/about"><img src="image/Google.png" alt="Google Plus"></a>
+                <a href="https:/it status/plus.google.com/u/0/108053289136553717187/about"><img src="image/Google.png" alt="Google Plus"></a>
 
                 <a href="https://twitter.com/awsfidaeldin"><img src="image/Twitter.png" alt="Twitter"></a>
                 
