--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <div class="pic">
                 <!--
-                <img src="image/Facebook.jpg" alt="Facebook">
+                <img src="image/Facebook.png" alt="Facebook">
                 <img src="image/Twitter.png" alt="Twitter">
                 <img src="image/linkedin.png" alt="Twitter">
                 <img src="image/Google.png" alt="Twitter">
