--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <img src="image/Google.png" alt="Twitter">
                 
                 -->
-                <a href="https://www.facebook.com/AwsYousif"><img src="image/Facebook.jpg" alt="Facebook"></a>
+                <a href="https://www.facebook.com/AwsYousif"><img src="image/facebookico.jpg" alt="Facebook"></a>
 
                 <a href="https://www.linkedin.com/in/awsyousif"><img src="image/linkedin.png" alt="Linkedin"></a>
 
-                <a href="https:/it status/plus.google.com/u/0/108053289136553717187/about"><img src="image/Google.png" alt="Google Plus"></a>
+                <a href="https://plus.google.com/108053289136553717187/about"><img src="image/Google.png" alt="Google Plus"></a>
 
                 <a href="https://twitter.com/awsfidaeldin"><img src="image/Twitter.png" alt="Twitter"></a>
                 
