--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     </head>
     <body>
         <div class="content">		
-<<<<<<< HEAD
-=======
-            <!-- This is the Section Tags -->
->>>>>>> gh-pages
 			<section>
 				<article>       
             <div class="left">
@@ -20,7 +16,7 @@
 
                     <a href="https://www.linkedin.com/in/awsyousif"><img src="image/linkedin.png" alt="Linkedin"></a>
 
-                    <a href="https:/it status/plus.google.com/u/0/108053289136553717187/about"><img src="image/Google.png" alt="Google Plus"></a>
+                    <a href="https://plus.google.com/u/0/108053289136553717187/about"><img src="image/Google.png" alt="Google Plus"></a>
 
                     <a href="https://twitter.com/awsfidaeldin"><img src="image/Twitter.png" alt="Twitter"></a>
                 </div>
