--- a/index.html
+++ b/index.html
@@ -7,42 +7,37 @@
     </head>
     <body>
         <div class="content">		
-			<section>
-				<article>       
-            <div class="left">
-                <img src="image/aws.jpg" alt="My Site" class="center" width="200" height="200">
-                <div class="pic">                
-                    <a href="https://www.facebook.com/AwsYousif"><img src="image/facebookico.jpg" alt="Facebook"></a>
-
-                    <a href="https://www.linkedin.com/in/awsyousif"><img src="image/linkedin.png" alt="Linkedin"></a>
-
-                    <a href="https://plus.google.com/u/0/108053289136553717187/about"><img src="image/Google.png" alt="Google Plus"></a>
-
-                    <a href="https://twitter.com/awsfidaeldin"><img src="image/Twitter.png" alt="Twitter"></a>
-                </div>
-            </div>
-            <div class="right">
-                <br>
-                <br>
-                        <h1>Aws Yousif Fida ELDin</h1>
-                        <h2>Postgraduate Student in the University of Denver</h2>
-                <p>
-                    A highly experienced IT professional with a Master of Science degree in Computer Science and Information Technology from the University of Putra Malaysia and a CISCO academy alumni from the CISCO Regional Networking Academy, with Cisco, Microsoft and COMPTIA certifications, has over five years in network lab setup and installing, configuring and troubleshooting Windows Servers 2008 R2, Windows 8 and LINUX. Has solid knowledge in configuring CISCO Switches, Routers, and Network Printers, and also installing and configuring Windows 7 using Microsoft deployment tools.
-                </p>
-                <div class="resume">
-                    <a href="bio.html"><strong><p><u>Full Resume</u></p></a></strong>
-                </div>
-                <div class="contact">
-                    <a href="form.html"><strong><p><u>Contact Me</u></p></a></strong>
-                </div>
-                <!-- For the CSS transition -->
-                <div class="view_port">
-                  <div class="polling_message">
-                           I hope you enjoy surfing my personal website. Please feel free to contact me any time.
-                  </div>
-                  <div class="cylon_eye"></div>
-                </div>
-            </div>   
+		<section>
+			<article>       
+		            <div class="left">
+		                <img src="image/aws.jpg" alt="My Site" class="center" width="200" height="200">
+		                <div class="pic">                
+		                    <a href="https://www.facebook.com/AwsYousif"><img src="image/facebookico.jpg" alt="Facebook"></a>
+		                    <a href="https://www.linkedin.com/in/awsyousif"><img src="image/linkedin.png" alt="Linkedin"></a>
+		                    <a href="https://plus.google.com/u/0/108053289136553717187/about"><img src="image/Google.png" alt="Google Plus"></a>
+		                    <a href="https://twitter.com/awsfidaeldin"><img src="image/Twitter.png" alt="Twitter"></a>
+		                </div>
+		            </div>
+	            	<div class="right">
+	                <br />
+	                <br />
+				<h1>Aws Yousif Fida ELDin</h1>
+			        <h2>Postgraduate Student in the University of Denver</h2>
+	                <p>A highly experienced IT professional with a Master of Science degree in Computer Science and Information Technology from the University of Putra Malaysia and a CISCO academy alumni from the CISCO Regional Networking Academy, with Cisco, Microsoft and COMPTIA certifications, has over five years in network lab setup and installing, configuring and troubleshooting Windows Servers 2008 R2, Windows 8 and LINUX. Has solid knowledge in configuring CISCO Switches, Routers, and Network Printers, and also installing and configuring Windows 7 using Microsoft deployment tools.</p>
+	                <div class="resume">
+	                    <a href="bio.html">Full Resume</a>
+	                </div>
+	                <div class="contact">
+	                    <a href="form.html">Contact Me</a>
+	                </div>
+	                <!-- For the CSS transition -->
+	                <div class="view_port">
+	                  <div class="polling_message">
+	                           I hope you enjoy surfing my personal website. Please feel free to contact me any time.
+	                  </div>
+	                  <div class="cylon_eye"></div>
+	                </div>
+	            </div>   
                 </article>
             </section> 
         </div>
